--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,26 @@ services:
     networks:
       - backend
 
+  phpBaza:
+    hostname: ${ENV_VHOD_BACKEND_HOST}
+    build:
+      context: ./Docker/php
+      args:
+        - WITH_XDEBUG=false
+    container_name: php-baza
+    image: 'baza_laravel'
+    env_file:
+      - ./Baza/.env
+    volumes:
+      - ./Baza:/var/www/vhod
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_VHOD_PATCH}
+    user: user
+    environment:
+      - WITH_XDEBUG=false
+      - WORKING_DIR=${ENV_VHOD_PATCH}
+    networks:
+      - backend
 
   worker:
     build:
@@ -170,7 +190,7 @@ services:
       - ./Docker/php/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
       - ./Docker/worker/conf/supervisord.conf:/etc/supervisor/conf.d/supervisord.conf
     user: user
-    command: [ "supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf" ]
+    #command: [ "supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf" ]
     networks:
       - backend
 
