--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ./Docker/nginx/proxy_params:/etc/nginx/proxy_params
       - ./Shared:${ENV_SHARED_PATCH}
       - ./Friendly:${ENV_DRUG_PATCH}
+      - ./Baza:${ENV_VHOD_PATCH}
       - ./Docker/nginx/auth.basic:/etc/nginx/auth.basic
     user: user
     environment:
@@ -68,6 +69,27 @@ services:
       - ./Docker/mysqlFriendly/my.cnf:/etc/mysql/my.cnf
     ports:
       - "33065:3306"
+    networks:
+      - backend
+
+  phpBaza:
+    hostname: ${ENV_VHOD_BACKEND_HOST}
+    build:
+      context: ./Docker/php
+      args:
+        - WITH_XDEBUG=false
+    container_name: php-baza
+    image: 'baza_laravel'
+    env_file:
+      - ./Baza/.env
+    volumes:
+      - ./Baza:/var/www/vhod
+      - ./Shared:${ENV_SHARED_PATCH}
+    working_dir: ${ENV_VHOD_PATCH}
+    user: user
+    environment:
+      - WITH_XDEBUG=false
+      - WORKING_DIR=${ENV_VHOD_PATCH}
     networks:
       - backend
 
